fixed issues with scroll on firefox

--- a/resources/public/css/main.scss
+++ b/resources/public/css/main.scss
@@ -233,27 +233,25 @@ body {
 }
 
 #content-wrapper {
-  @include row(table);
+  padding: 2px 0 2px $sidebar-width;
 
-  padding-left: $sidebar-width;
-
-  margin-top: $section-margin;
+  border: 1px solid $sidebar-color;
 
   section {
-    @include span-columns(6);
+    width: 50%;
     border: $section-border;
-    padding-left: 0;
-    padding-right: 0;
-    vertical-align: top;
+    overflow-y: auto;
 
     &.left-panel {
-      margin-left: $section-margin;
-      margin-right: $section-margin/2;
+      float: left;
+      padding-left: $section-margin;
+      padding-right: $section-margin/2;
     }
 
     &.right-panel {
-      margin-left: $section-margin/2;
-      margin-right: $section-margin;
+      float: right;
+      padding-left: $section-margin/2;
+      padding-right: $section-margin;
     }
   }
 }
@@ -320,12 +318,6 @@ div.pagination {
 .records-list {
   border-right: $section-border;
   border-left: $section-border;
-
-  overflow-y: auto;
-
-  //for firefox
-  height: 20px;
-  min-height: 100%;
 
   .record-item {
     background-color: $color-bg-light;
@@ -548,7 +540,7 @@ div.modal {
   background-color: $sidebar-bg-color;
   color: $color-bg;
   padding: 0 5px;
-  border-radius:2px;
+  border-radius: 2px;
   cursor: pointer;
 
   &:hover {
